Closed Bug 192272 Opened 22 years ago Closed 22 years ago

Mozilla crashed on Quit after attempting access to SSL IMAP account during DNS hang [@ nsInputStreamPump::EnsureWaiting]

Categories

(MailNews Core :: Networking: IMAP, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.3beta

People

(Reporter: bugmail, Assigned: darin.moz)

References

()

Details

(Keywords: crash, testcase, topcrash+)

Crash Data

Attachments

(3 files)

When Mozilla is trying to resolve a cranky DNS (bug 192271), if connection is
attempted to another site in another tab or in MailNews that connection will
pause until the recalcitrant DNS query completes. Sometimes, Mozilla will crash
if Quit in this state.

Steps to reproduce:
1. Attempt to access <http://www.imagemagick.org/> using the DNS <206.13.28.12>
2. Attempt to access <> in another tab
3. Observe that access attempt "pause" while the first access hangs
4. Attempt to access an SSL IMAP account
5. Quit Mozilla.

Expected results:
Mozilla should abort all the connection attempts and quit successfully.

Actual results:
Mozilla crashes sometimes.

Reproducibility:
Tried, could not reproduce.
i belive this should be a dupe of 192271.

I did query on talkback and there are multiple crash reports.
I'll attach an attachment.

I searched through bugzilla and did not see any other bugs
with the same stacktrace.
-> Darin
Assignee: bienvenu → darin
Please note that attachment 113813 [details] contains e-mail addresses, and should be deleted.
right, i've seen this crash recently.  my patch for bug 190106 actually includes
the fix, but i'll attach just the part needed to fix this crash here.
Status: NEW → ASSIGNED
Flags: blocking1.3?
Priority: -- → P1
Target Milestone: --- → mozilla1.3beta
Attached patch v1 patchSplinter Review
the problem is that nsInputStreamPump is not threadsafe.  IMAP should not try
to talk to it from both the UI thread as well as the background IMAP thread. 
i'm fixing this problem by calling the transport's close method instead to
bring down the necko connection.
Attachment #113817 - Flags: review?(sspitzer)
Comment on attachment 113817 [details] [diff] [review]
v1 patch

sr=bienvenu
Attachment #113817 - Flags: superreview+
Comment on attachment 113817 [details] [diff] [review]
v1 patch

r=sspitzer
Attachment #113817 - Flags: review?(sspitzer) → review+
Comment on attachment 113817 [details] [diff] [review]
v1 patch

seeking drivers approval for 1.3 beta...
Attachment #113817 - Flags: approval1.3b?
Comment on attachment 113817 [details] [diff] [review]
v1 patch

a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #113817 - Flags: approval1.3b? → approval1.3b+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Are you sure? It hasn't shown up on Bonsai yet.
Whoops, never mind; there it is.
Adding topcrash+, testcase keywords for future reference.  Also updating
Hardware and OS to All...there were crashes on Windows and Linux as well as MacOS. 

Looking at the latest Talkback data, this crash is gone...no crashes since 2/6
MozillaTrunk builds.  Marking verified.

Status: RESOLVED → VERIFIED
Keywords: testcase, topcrash+
OS: MacOS X → All
Hardware: Macintosh → All
Flags: blocking1.3?
Product: MailNews → Core
Product: Core → MailNews Core
Crash Signature: [@ nsInputStreamPump::EnsureWaiting]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: