fixes bug 192272 "Mozilla crashed on Quit after attempting access to SSL IMAP account during DNS hang [@ nsInputStreamPump::EnsureWaiting]" r=sspitzer sr=bienvenu a=asa